--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ torchaudio>=2.0,<3.0
 openwakeword @ git+https://github.com/dscripka/openWakeWord.git@af923e1d57208ec1e2377adb8bb032b4b98a6104
 requests
 tqdm
+pydub
